# LastHero

./: .gitignore  CMakeLists.txt  CREDITS.txt  LevelEditor  README.md  Spinners.exe.REMOVED.git-id  config.cfg  editor.cfg  game.cfg  log.txt  memtest  results.json  results.json.REMOVED.git-id  user.cfg  val_log_001  valgrind.txt
res/: entities.cfg  gui.cfg  level_000.cfg  level_001.cfg  level_002.cfg  shaders.cfg  sounds.cfg  stages.cfg  widgets.cfg
res/animations/: banana.cfg  bite.cfg  bite_blood.cfg  bullet.cfg  bush.cfg  cow.cfg  glowing_bullet.cfg  glowing_bullet_explosion.cfg  monkey.cfg  mud.cfg  player.cfg  powerup_player_hp.cfg  rock_1.cfg  slime.cfg  slime_factory.cfg  snake.cfg  teleport_beam.cfg  tree_common_3.cfg  tree_common_4.cfg  tree_common_5.cfg  tree_dead_1.cfg  wood_log_1.cfg
res/interface/: interface.cfg  widgets.cfg
res/shaders/: bloom.frag  blur.frag  color.frag  crt-drigax.frag  crt-drigax.vert  crt-easy.frag  crt-easy.vert  crt-fake.frag  crt-fake.vert  crt-flatscreen.frag  crt-flatscreen.vert  crt-geom.frag  crt-geom.vert  crt-mattias.frag  crt-mattias.vert  crt-vga.frag  crt-vga.vert  desaturate.frag  dream_vision.frag  outline.frag  outline.vert  pixelizer.frag  predator.frag  rainbow.frag  ri_scan.frag  ri_scan.vert  sobel.frag
res/tilesetdef/: tiles_woods.cfg
src/: AStarContainer.cpp  AStarContainer.h  AStarNode.cpp  AStarNode.h  Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  ActionStream.cpp  ActionStream.h  Animation.cpp  Animation.h  AnimationSet.cpp  AnimationSet.h  App.cpp  App.h  AppConfig.cpp  AppConfig.h  Assets.cpp  Assets.h  Border.cpp  Border.h  Box.cpp  Box.h  CAnimation.cpp  CAnimation.h  CBChase.cpp  CBChase.h  CBFire.cpp  CBFire.h  CBPatrol.cpp  CBPatrol.h  CBPowerup.cpp  CBPowerup.h  CBox.cpp  CBox.h  CClickLocation.cpp  CClickLocation.h  CCollision.cpp  CCollision.h  (+120 more)
